fixed z-index for WcOverlayVideo.js

--- a/src/system/style/overlay.less
+++ b/src/system/style/overlay.less
@@ -1,9 +1,9 @@
 /* ***dev start: please add your styles bellow only!!!*** */
 #wc-showcase-root {
 
-  @z-index-container-top: 101;
+  @z-index-container-top: 1000;
   @z-index-overlay: 8;
-  @z-index-close-video: 110;
+  @z-index-close-video: 1;
 
    #video-view {
       display: none;
@@ -21,7 +21,7 @@
          position: absolute;
          height: 100%;
          width: 100%;
-         z-index: @z-index-overlay;
+        //  z-index: @z-index-overlay;
       }
       .wcOverlayVideo {
          z-index: @z-index-container-top;
